feat: add base component for preload

--- a/src/ui/src/components/api_error_card/api_error_card.ng.html
+++ b/src/ui/src/components/api_error_card/api_error_card.ng.html
@@ -50,7 +50,7 @@ limitations under the License.
         Once the issue is fixed,
         <button
           mat-button
-          aria-label="Open Settings"
+          aria-label="Reload the page"
           (click)="handleClickReload()"
         >
           <mat-icon>refresh</mat-icon>
