feat: add graph preload component to home screen

--- a/src/ui/src/components/model_source_input/model_source_input.ng.html
+++ b/src/ui/src/components/model_source_input/model_source_input.ng.html
@@ -130,6 +130,8 @@ limitations under the License.
           (change)="handleClickUpload(uploadInput)">
     </div>
 
+    <graph-preload></graph-preload>
+
     <!-- Warning message when maximum models count has been reached. -->
     @if (hasReachedMaxModelsCount) {
       <div class="model-count-warning">
