--- a/src/ui/src/components/model_source_input/model_source_input.scss
+++ b/src/ui/src/components/model_source_input/model_source_input.scss
@@ -208,6 +208,24 @@
     }
   }
 
+  .preload-container:not([hidden]) {
+    display: flex;
+    justify-content: center;
+
+    button {
+      min-height: 40px;
+      height: 100%;
+      border-radius: 99px;
+      background-color: white;
+      color: #0b57d0;
+
+      &[disabled] {
+        background-color: rgba(31, 31, 31, 0.12);
+        color: rgba(31, 31, 31, 0.38);
+      }
+    }
+  }
+
   .model-count-warning {
     color: var(--me-warning-text-color);
     background-color: var(--me-warning-container-color);
