--- a/src/ui/src/components/source_paste_dialog/source_paste_dialog.scss
+++ b/src/ui/src/components/source_paste_dialog/source_paste_dialog.scss
@@ -27,22 +27,64 @@
   padding-block-end: 0;
 
   h2 {
-    font-size: 24px;
+    font-size: inherit;
     font-weight: 500;
     margin-block: 0.5em;
     flex-grow: 1;
+
+    code {
+      font-family: monospace;
+      background-color: var(--me-surface-container-color);
+      padding: 4px;
+      border-radius: 6px;
+    }
   }
 
   .button-container {
     display: flex;
+    align-items: center;
     gap: 1rem;
   }
 }
 
 
 .dialog-content {
-  padding: 0 1rem;
+  padding: 0;
   max-height: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
   overflow: auto;
+  scrollbar-gutter: stable both-edges;
+  scrollbar-width: thin;
   overflow-anchor: auto;
+
+  pre {
+    height: 100%;
+    white-space: pre-wrap;
+    overflow-wrap: break-word;
+    word-break: break-all;
+    tab-size: 2;
+    line-height: 1lh;
+    font-size: 1rem;
+    font-family: monospace;
+    margin: 0;
+    box-sizing: border-box;
+  }
+}
+
+.buttons-container {
+  hr { border: none; }
+
+  button {
+    min-height: 40px;
+    height: 100%;
+    border-radius: 99px;
+    padding: 0 16px;
+  }
+
+  .primary-button {
+    background-color: var(--me-secondary-container-color);
+    color: var(--me-on-secondary-container-color);
+  }
 }
