feat: add monaco as the editor for pasted code

--- a/src/ui/src/components/source_paste_dialog/source_paste_dialog.ng.html
+++ b/src/ui/src/components/source_paste_dialog/source_paste_dialog.ng.html
@@ -35,10 +35,7 @@ limitations under the License.
   </div>
 </div>
 <div mat-dialog-content class="dialog-content">
-  <pre
-    #modelSourceElement
-    contenteditable="plaintext-only"
-  ></pre>
+  <pre #modelSourceElement></pre>
 </div>
 <div mat-dialog-actions align="end" class="buttons-container">
   <button mat-button mat-dialog-close>Close</button>
