fix: update code editor wrapper element and css

--- a/src/ui/src/components/source_paste_dialog/source_paste_dialog.ng.html
+++ b/src/ui/src/components/source_paste_dialog/source_paste_dialog.ng.html
@@ -35,7 +35,7 @@ limitations under the License.
   </div>
 </div>
 <div mat-dialog-content class="dialog-content">
-  <pre #modelSourceElement></pre>
+  <code-editor-wrapper #modelSourceElement></code-editor-wrapper>
 </div>
 <div mat-dialog-actions align="end" class="buttons-container">
   <button mat-button mat-dialog-close>Close</button>
