--- a/src/ui/src/components/cpp_code_dialog/cpp_code_dialog.scss
+++ b/src/ui/src/components/cpp_code_dialog/cpp_code_dialog.scss
@@ -47,7 +47,7 @@
   overflow-anchor: auto;
 
   code-editor-wrapper {
-    display: block;
+    display: flex;
     width: 100%;
     height: 100%;
     tab-size: 2;
@@ -57,5 +57,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
   }
 }
