--- a/src/ui/src/components/source_paste_dialog/source_paste_dialog.scss
+++ b/src/ui/src/components/source_paste_dialog/source_paste_dialog.scss
@@ -60,7 +60,7 @@
   overflow-anchor: auto;
 
   code-editor-wrapper {
-    display: block;
+    display: flex;
     width: 100%;
     height: 100%;
     tab-size: 2;
@@ -70,6 +70,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: stretch;
   }
 }
 
